--- a/package.json
+++ b/package.json
@@ -51,5 +51,8 @@
     "prettier": "^2.4.1",
     "ts-jest": "^27.0.5",
     "typescript": "^4.4.3"
+  },
+  "dependencies": {
+    "react": "^17.0.2"
   }
 }
