--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: '10.19'
+          node-version: '16.x'
       - name: Install dependencies
         run: npm ci
       - name: Release
