--- a/.releaserc.json
+++ b/.releaserc.json
@@ -7,7 +7,7 @@
     "@semantic-release/changelog",
     ["@semantic-release/git", {
       "assets": ["dist/**/*.{ts,tsx,js,jsx}", "package.json", "README.md", "CHANGELOG.md"],
-      "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+      "message": "chore(release): ${nextRelease.version} [skip ci]"
     }]
   ]
 }
