chore: change package name

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -5,6 +5,7 @@
     "@semantic-release/release-notes-generator",
     "@semantic-release/github",
     "@semantic-release/changelog",
+    "@semantic-release/npm",
     ["@semantic-release/git", {
       "assets": ["dist/**/*.{ts,tsx,js,jsx}", "package.json", "README.md", "CHANGELOG.md"],
       "message": "chore(release): ${nextRelease.version} [skip ci]"
